<resources>
    <string name="app_name">Awash Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="current_account">Current Account</string>
    <string name="recharge">Recharge</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="phone_number">Phone Number</string>
    <string name="amount">Amount</string>
    <string name="settings">Settings</string>
    <string name="pin">Pin</string>
    <string name="account_number">Account Number</string>
...
